[package]
name = "floem-tailwind"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "Tailwind-style utility methods for Floem styling"
license = "MIT"

[dependencies]
floem = { git = "https://github.com/lapce/floem" }
peniko = "0.5"

[[example]]
name = "demo"
path = "examples/demo.rs"
